--- a/Kevin20250324.AppWebMVC/Views/Users/Edit.cshtml
+++ b/Kevin20250324.AppWebMVC/Views/Users/Edit.cshtml
@@ -23,14 +23,14 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <label asp-for="Role" class="control-label"></label>
-                <input asp-for="Role" class="form-control" />
+                <select asp-for="Role" class="form-control">
+                    <option value="">SELECCIONAR</option>
+                    <option value="ADMINISTRADOR">ADMINISTRADOR</option>
+                    <option value="NORMAL">GERENTE</option>
+                </select>
                 <span asp-validation-for="Role" class="text-danger"></span>
             </div>
             <div class="form-group">
