--- a/Kevin20250324.AppWebMVC/Views/Users/Create.cshtml
+++ b/Kevin20250324.AppWebMVC/Views/Users/Create.cshtml
@@ -28,9 +28,18 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ConfirmarPassword" class="control-label"></label>
+                <input asp-for="ConfirmarPassword" class="form-control" />
+                <span asp-validation-for="ConfirmarPassword" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="Role" class="control-label"></label>
-                <input asp-for="Role" class="form-control" />
-                <span asp-validation-for="Role" class="text-danger"></span>
+                <select asp-for="Role" class="form-control">
+                    <option value="">SELECCIONAR</option>
+                    <option value="ADMINISTRADOR">ADMINISTRADOR</option>
+                    <option value="NORMAL">NORMAL</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
